# agent-ship

./: .dockerignore  .env.example  .gitignore  .mcp.settings.json  .readthedocs.yaml  .slugignore  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LOCAL_DEVELOPMENT.md  MEMORY_OPTIMIZATION.md  Makefile  OPEN_SOURCE_SYNC_STRATEGY.md  Pipfile  Procfile  QUICK_SYNC_GUIDE.md  README.md  docker-compose.test.yml  docker-compose.yml  env.example  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/commands/: add-mcp.md  new-agent.md  run-tests.md  studio.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude.yml  pr-checks.yml  tests.yml
agent_store_deploy/: POSTGRES_SETUP.md  README.md  setup_heroku_postgres.sh  setup_local_postgres.sh
articles/: 01-why-we-need-agentship.md  02-agentship-overview.md  03-agentic-design-patterns.md  04-context-engineering.md  05-memory-with-agentship.md  06-observability-with-agentship.md  07-evals-with-agentship.md  README.md
branding/: BRAND_GUIDELINES.md
debug_ui/: __init__.py  router.py
debug_ui/static/: index.html
docs/: MCP_INTEGRATION_DESIGN.md  index.md
docs/api/: agent-config.md  base-agent.md  core-modules.md  models.md
docs/building-agents/: base-agent.md  overview.md
docs/deployment/: heroku.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/internal/: CONSOLIDATION_SUMMARY.md  GAP_ANALYSIS.md  HUMAN_FRIENDLY_DESIGN.md  IMPROVEMENTS_SUMMARY.md  (+1 more)
postman/: AgentAPI.postman_environment.json  AgentsAPI.postman_collection.json  README.md
scripts/: check_healthlogue_refs.sh  generalize_agents_for_opensource.sh  pre-commit-hook-template.sh  profile_memory.py  sync_open_source.sh  test_mcp_oauth_e2e.py  test_memory_docker.sh
src/: __init__.py  log_settings.py
studio/: __init__.py  router.py
tests/: conftest.py  test_auto_tool_docs.py  test_event_loop_fix.py  test_postgres_adk_mcp.py  test_postgres_langgraph_mcp.py
(+271 files in other folders)
